# ncku-hospital-chatbot

./: .gitignore  AGENTS.md  LICENSE  README.md
.github/workflows/: black.yaml  pytest.yaml  ruff.yaml
linebot/: .env.example  README.md  pyproject.toml
linebot/app/: main.py
linebot/app/api/: __init__.py  audio.py  dify.py  vision.py
linebot/app/api/utils/: openai_api.py  providers.py
linebot/app/config/: line_config.py  logger.py
linebot/app/db/: database.py  redis_client.py
linebot/app/models/: user.py
linebot/app/repositories/: user_repository.py
linebot/app/routers/: admin.py  linebot.py
linebot/app/services/: message_service.py  postback_service.py  welcome_service.py
linebot/app/services/auth/: jwt_handler.py
linebot/app/services/handlers/: __init__.py  audio_handler.py  common.py  image_handler.py  postback.py  text_handler.py
linebot/app/services/utils/: __init__.py  flex_message.py  rate_limiter.py
linebot/app/templates/: login.html  patient_info.html
linebot/flex_messages/: 協助資源.json  基本資料.json  常見問題.json  治療訊息.json  知識寶典.json  知識寶典_洗腎管路.json  知識寶典_洗腎迷思.json
linebot/tests/: conftest.py  test_jwt_handler.py  test_main.py  test_user_repository.py
richmenu/: README.md  richmenu_deploy_page1.sh  richmenu_deploy_page2.sh  richmenu_deploy_page3.sh
